# seqan-retreat-2017-how-to-write-tests

./: README.md
boosttest/: CMakeLists.txt
boosttest/align/: CMakeLists.txt  align_enum_test.cpp
googletest/: CMakeLists.txt
googletest/align/: align_config_test.cpp  align_enum_test.cpp
include/seqan3/align/: align_config.hpp  align_enum.hpp
test/: CMakeLists.txt
test/align/: CMakeLists.txt  align_config_test.cpp  align_enum_test.cpp
test/basic/: CMakeLists.txt  integral_types_test.cpp
